@@ -1,4 +1,4 @@
-package org.apache.lucene.misc;
+package org.apache.lucene.search;
 
 /**
  * Licensed to the Apache Software Foundation (ASF) under one or more
